...
                                        <rect key="frame" x="0.0" y="1" width="92" height="44"/>
                                        <constraints>
                                            <constraint firstAttribute="height" constant="44" id="G2x-7E-7Wa"/>
                                            <constraint firstAttribute="width" constant="92" id="kzG-yp-4s8"/>
                                        </constraints>
                                        <fontDescription key="fontDescription" type="system" weight="light" pointSize="16"/>
                                        <state key="normal" title="Back">
                                            <color key="titleColor" cocoaTouchSystemColor="darkTextColor"/>
                                        </state>
                                        <connections>
                                            <action selector="backButtonAction:" destination="2YK-Fd-pDb" eventType="touchUpInside" id="Gmt-z3-RBA"/>
                                        </connections>
                                    </button>
...
                                        <rect key="frame" x="14" y="7" width="32" height="32"/>
                                        <constraints>
                                            <constraint firstAttribute="width" constant="32" id="k85-fh-ad5"/>
                                            <constraint firstAttribute="height" constant="32" id="vTH-oX-Kum"/>
                                        </constraints>
                                    </imageView>
                                    <imageView hidden="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="settings" translatesAutoresizingMaskIntoConstraints="NO" id="aey-4b-4hL">
                                        <rect key="frame" x="326" y="6" width="32" height="32"/>
                                        <constraints>
                                            <constraint firstAttribute="height" constant="32" id="Xl9-Oe-gme"/>
                                            <constraint firstAttribute="width" constant="32" id="bVO-8b-jqj"/>
                                        </constraints>
                                    </imageView>
...
                        <subviews>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="d5w-yM-SAh">
                                <rect key="frame" x="10" y="604" width="82" height="43"/>
                                <constraints>
                                    <constraint firstAttribute="width" constant="82" id="n7k-Cd-OgA"/>
                                </constraints>
                                <state key="normal" title="OK"/>
                                <connections>
                                    <action selector="okButtonAction:" destination="NF8-cM-Y1I" eventType="touchUpInside" id="vv2-7o-NhA"/>
                                </connections>
                            </button>
                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="h0h-dn-GJs">
                                <rect key="frame" x="0.0" y="93" width="375" height="503"/>
...
