...
    private func loadRemoteData() {
        
    }
    

    private func dummyEvents() {
        events.append(PublicEvent(event: ("Best Buddies Spring Gala",EntityType.Event,0),
                                  organization: ("Best Buddies",EntityType.Organization,0),
                                  facility: ("Grand Ballroom, Pacific Hotel",EntityType.Facility,0),
                                  eventDate: DateTimeDuration(yr:2016, mo:5, dy:10, hr:10, min:0, durationMin:120),
                                  eventDetail: "Come to the event of the season - our spring gala celebration.  This is a grand opportunity to socialize and make friends, party, and generally have a great time."))
        
        events.append(PublicEvent(event: ("Challenger Baseball Field of Dreams",EntityType.Event,1),
...
