...
                                <constraints>
                                    <constraint firstAttribute="height" constant="28" id="d0J-DK-H48"/>
                                    <constraint firstAttribute="width" constant="244" id="mZu-mm-IXa"/>
                                </constraints>
                                <segments>
                                    <segment title="Log In"/>
                                    <segment title="Sign Up"/>
                                    <segment title="Try It Out!"/>
                                </segments>
                                <connections>
                                    <action selector="segmentedControlAction:" destination="6cu-Tl-4Vi" eventType="valueChanged" id="a9Z-3x-3Oc"/>
                                </connections>
                            </segmentedControl>
...
